@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171106"
-#define public MagickPackageReleaseDate "snapshot-20171106"
+#define public MagickPackageVersionAddendum ".020171111"
+#define public MagickPackageReleaseDate "snapshot-20171111"
